refactored code (as part of another lecture)